[package]
name = "easing-fixed"
version = "0.1.0"
edition = "2021"
authors = [
    "Jack Ward <joliv@users.noreply.github.com>",
    "Anatol Ulrich <spookyvision@users.noreply.github.com>",
]
license = "MIT"
description = "easing iterators using fixed-point math"
repository = "https://github.com/spookyvision/easing-fixed"
readme = "README.md"
keywords = ["animation", "no_std", "fixed"]

[dependencies]
fixed = "1.28.0"
fixed-exp = { git = "https://github.com/spookyvision/fixed-exp", rev = "e291e8d", version = "0.2" }
fixed_trigonometry = { version = "0.4.4", default-features = false }

[dev-dependencies]
fixed = { version = "1.28.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
anyhow = "1"

[build-dependencies]
walkdir = "2.5.0"
