[package]
edition = "2021"
name = "easing-fixed"
version = "0.2.0"
authors = [
    "Jack Ward <joliv@users.noreply.github.com>",
    "Anatol Ulrich <spookyvision@users.noreply.github.com>",
    "https://github.com/florianL21",
]
build = "build.rs"
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "easing iterators using fixed-point math"
readme = "README.md"
keywords = [
    "animation",
    "no_std",
    "fixed",
]
license = "MIT"
repository = "https://github.com/spookyvision/easing-fixed"

[lib]
name = "easing_fixed"
path = "src/lib.rs"

[dependencies.fixed]
version = "1.29.0"

[dependencies.fixed-exp2]
version = "0.2"

[dependencies.fixed_trigonometry]
version = "0.4.4"
default-features = false

[dev-dependencies.anyhow]
version = "1"

[dev-dependencies.fixed]
version = "1.28.0"
features = ["serde"]

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1"

[build-dependencies.walkdir]
version = "2.5.0"
